<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/second_dp"
    android:orientation="vertical"
    app:contentPadding="@dimen/second_dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/dialogText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fifth_dp"
            android:text="@string/dialog_text"
            android:textAlignment="center"
            android:textSize="@dimen/twenty_sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/second_dp"
            android:layout_marginTop="@dimen/first_dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/second_dp"
            android:layout_marginTop="@dimen/first_dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_of_place" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/second_dp"
            android:layout_marginEnd="@dimen/second_dp"
            android:text="@string/save"
            android:textSize="@dimen/fifteen_sp"
            app:icon="@drawable/ic_baseline_add_24" />
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>